# harmony

./: .dockerignore  .env.development  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  GUIDE.md  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 20260721_0001_library_foundation.py  20260721_0002_artwork_foundation.py  20260721_0003_library_search.py  20260721_0004_library_filter_indexes.py  20260721_0005_library_analytics_indexes.py  20260721_0006_library_bulk_operations.py  20260721_0007_backfill_song_created_at.py  20260721_0008_library_jobs_activity.py  20260721_0009_metadata_intelligence.py  20260721_0010_metadata_health_issues.py  20260722_0011_metadata_health_indexes.py  20260722_0012_provider_cache.py  20260722_0013_metadata_matching.py  20260722_0014_metadata_application.py  20260722_0015_metadata_application_jobs.py  20260722_0016_spotify_genre_provenance.py  20260722_0017_download_outcomes.py  20260723_0018_download_source_identity.py  20260724_0019_download_telemetry.py  20260724_0020_playlist_track_metadata.py  20260724_0024_auto_playlists.py  (+5 more)
app/: diagnostics_downloads.py  main.py  test_metadata.py
docs/: api.md  architecture.md  attention-and-metadata-intelligence.md  configuration.md  library-health-issues.md  roadmap.md
tests/: conftest.py  test_artwork.py  test_auto_playlists.py  test_collections.py  test_crud.py  test_dashboard.py  test_database_bootstrap.py  test_download_bulk.py  test_download_dashboard.py  test_download_details.py  test_download_process_manager.py  test_download_queue_api.py  test_download_telemetry.py  test_download_worker_cancellation.py  test_downloads_persisted_history.py  test_duplicate_detector.py  test_library_analytics.py  test_library_api.py  test_library_bulk.py  test_library_events.py  test_library_filters.py  test_library_health.py  test_library_health_page.py  test_library_index.py  test_library_jobs.py  test_library_page.py  test_library_search.py  test_library_watcher.py  test_library_watcher_syntax.py  test_lyrics.py  test_manual_metadata.py  test_metadata.py  test_metadata_application_jobs.py  test_metadata_discovery.py  test_metadata_health.py  test_metadata_intelligence.py  test_metadata_matching.py  test_migrations.py  test_musicbrainz_provider.py  test_navidrome.py  (+13 more)
(+178 files in other folders)
