[project]
name = "harmony"
version = "1.6.0"
description = "Self-hosted music downloader and organizer for Navidrome."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    # SpotDL 4.5 declares FastAPI >=0.103,<0.104. Keep this constraint in the
    # canonical manifest so pip can resolve the production image in one pass.
    "fastapi>=0.103,<0.104",
    # SpotDL 4.5 also requires Uvicorn >=0.23.2,<0.24.
    "uvicorn[standard]>=0.23.2,<0.24",
    "jinja2>=3.1.6",
    "sqlalchemy>=2.0.43",
    "alembic>=1.16",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "loguru>=0.7.3",
    "mutagen>=1.47",
    "watchdog>=6.0",
    "httpx>=0.24,<0.25",
    # Pin the current SpotDL release to avoid resolver backtracking across
    # older 4.5.x metadata candidates during image builds.
    "spotdl==4.5.2",
    "spotipy>=2.25.0",
    "yt-dlp>=2025.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.24,<0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
